force-app/main/default/objects/Judgment__c/Judgment__c.object-meta.xml
<CustomObject>
    <description>To store the data for Judgement data</description>
    <label>Judgment</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Judgment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Judgments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>