force-app/main/default/objects/Judgment__c/fields/Agency_Initiated_Legal_Action__c.field-meta.xml
<CustomField>
    <fullName>Agency_Initiated_Legal_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Initiated Legal Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>