force-app/main/default/objects/Judgment__c/fields/Agency_Initiated_Legal_Action_Formula__c.field-meta.xml
<CustomField>
    <fullName>Agency_Initiated_Legal_Action_Formula__c</fullName>
    <formula>Agency_Initiated_Legal_Action_Lookup__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display Agency Name</inlineHelpText>
    <label>Agency Initiated Legal Action Name</label>
    <type>Text</type>
</CustomField>