force-app/main/default/objects/Judgment__c/fields/Agency_Initiated_Legal_Action_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Agency_Initiated_Legal_Action_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Initiated Legal Action</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Judgments (Agency Initiated Legal Action)</relationshipLabel>
    <relationshipName>Judgments1</relationshipName>
    <type>Lookup</type>
</CustomField>