force-app/main/default/objects/Judgment__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attorney</label>
    <length>250</length>
    <type>Text</type>
</CustomField>