force-app/main/default/objects/Judgment__c/fields/Balance_five__c.field-meta.xml
<CustomField>
    <fullName>Balance_five__c</fullName>
    <label>Judgment Balance-5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>