force-app/main/default/objects/Judgment__c/fields/Balance_four__c.field-meta.xml
<CustomField>
    <fullName>Balance_four__c</fullName>
    <label>Judgment Balance-4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>