force-app/main/default/objects/Judgment__c/fields/Balance_one__c.field-meta.xml
<CustomField>
    <fullName>Balance_one__c</fullName>
    <label>Judgment Balance-1</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>