force-app/main/default/objects/Judgment__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name populated from Product and Editable</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>