force-app/main/default/objects/Judgment__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>Court__c</referenceTo>
    <relationshipLabel>Judgments (County)</relationshipLabel>
    <relationshipName>Judgment</relationshipName>
    <type>Lookup</type>
</CustomField>