force-app/main/default/objects/Judgment__c/fields/County_Identifier__c.field-meta.xml
<CustomField>
    <fullName>County_Identifier__c</fullName>
    <description>County_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>County_Identifier</inlineHelpText>
    <label>County_Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>