force-app/main/default/objects/Judgment__c/fields/County_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>County Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>