force-app/main/default/objects/Judgment__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <label>Type of Court</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Claims Court​</fullName>
            </value>
            <value>
                <fullName>Superior Court of Justice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>