force-app/main/default/objects/Judgment__c/fields/Court_Comments__c.field-meta.xml
<CustomField>
    <fullName>Court_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Court Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>