force-app/main/default/objects/Judgment__c/fields/Current_Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_Balance__c</fullName>
    <formula>Current_Principal_Balance__c + Current_Interest_Balance__c + NSF_Fees__c + Balance_Adjusting_Disbursements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>sum of Current Principal Balance, Current Interest Balance, NSF Fees &amp; Balance Adjusting Disbursements</inlineHelpText>
    <label>Current Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>