force-app/main/default/objects/Judgment__c/fields/Current_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Email__c</fullName>
    <formula>$User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Email</label>
    <type>Text</type>
</CustomField>