force-app/main/default/objects/Judgment__c/fields/Current_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Name__c</fullName>
    <formula>$User.FirstName + &apos; &apos; +$User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Name</label>
    <type>Text</type>
</CustomField>