force-app/main/default/objects/Judgment__c/fields/Current_User_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Phone_Number__c</fullName>
    <formula>$User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Phone Number</label>
    <type>Text</type>
</CustomField>