force-app/main/default/objects/Judgment__c/fields/Current_User_Title__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Title__c</fullName>
    <formula>$User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Title</label>
    <type>Text</type>
</CustomField>