force-app/main/default/objects/Judgment__c/fields/Customer_Email_address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Email address</label>
    <type>Email</type>
</CustomField>