force-app/main/default/objects/Judgment__c/fields/Data_Judgment__c.field-meta.xml
<CustomField>
    <fullName>Data_Judgment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Judgment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>