force-app/main/default/objects/Judgment__c/fields/Date_Debtor_Served__c.field-meta.xml
<CustomField>
    <fullName>Date_Debtor_Served__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Debtor Served</label>
    <type>Date</type>
</CustomField>