force-app/main/default/objects/Judgment__c/fields/Date_Debtor_Served_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Debtor_Served_Format__c</fullName>
    <formula>RIGHT(TEXT(YEAR( Date_Debtor_Served__c )), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Debtor Served Format</label>
    <type>Text</type>
</CustomField>