force-app/main/default/objects/Judgment__c/fields/Date_Writ_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Writ_Issued__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Writ Issued</label>
    <type>Date</type>
</CustomField>