force-app/main/default/objects/Judgment__c/fields/Date_Writ_Issued_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_Writ_Issued_Text__c</fullName>
    <description>Using for Judgment file processing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Using for Judgment file processing</inlineHelpText>
    <label>Date Writ Issued Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>