force-app/main/default/objects/Judgment__c/fields/Debtnext_Id__c.field-meta.xml
<CustomField>
    <fullName>Debtnext_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Debtnext Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>