force-app/main/default/objects/Judgment__c/fields/Defended_Action__c.field-meta.xml
<CustomField>
    <fullName>Defended_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Defended Action</inlineHelpText>
    <label>Defended Action</label>
    <type>Checkbox</type>
</CustomField>