force-app/main/default/objects/Judgment__c/fields/Enforcement_County__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enforcement County</label>
    <referenceTo>Enforcement_County__c</referenceTo>
    <relationshipLabel>Judgments</relationshipLabel>
    <relationshipName>Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>