force-app/main/default/objects/Judgment__c/fields/Enforcement_County_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_County_Identifier__c</fullName>
    <description>Enforcement_County_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enforcement_County_Identifier</inlineHelpText>
    <label>Enforcement_County_Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>