force-app/main/default/objects/Judgment__c/fields/Enforcement_County_Name__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_County_Name__c</fullName>
    <formula>Enforcement_County__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enforcement County Name</label>
    <type>Text</type>
</CustomField>