force-app/main/default/objects/Judgment__c/fields/Enforcement_County_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_County_Phone_Number__c</fullName>
    <formula>Enforcement_County__r.Enforcement_County_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enforcement County Phone Number</label>
    <type>Text</type>
</CustomField>