force-app/main/default/objects/Judgment__c/fields/Enforcement_County_Province__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_County_Province__c</fullName>
    <description>Enforcement County Province</description>
    <formula>TEXT( Enforcement_County__r.Enforcement_County_Province__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enforcement County Province</inlineHelpText>
    <label>Enforcement County Province</label>
    <type>Text</type>
</CustomField>