force-app/main/default/objects/Judgment__c/fields/Filing_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date_Text__c</fullName>
    <description>Using for file judgment processing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Using for file judgment processing</inlineHelpText>
    <label>Filing Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>