force-app/main/default/objects/Judgment__c/fields/Garnishment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Garnishment_Amount__c</fullName>
    <label>Garnishment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>