force-app/main/default/objects/Judgment__c/fields/Garnishment_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Garnishment_Date_Format__c</fullName>
    <formula>CASE(
MONTH(  Garnishment_Date__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12,&quot;December&quot;,
&quot;&quot;) + &quot; &quot; + TEXT(DAY(Garnishment_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garnishment Date Format</label>
    <type>Text</type>
</CustomField>