force-app/main/default/objects/Judgment__c/fields/Garnishment_Number__c.field-meta.xml
<CustomField>
    <fullName>Garnishment_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Garnishment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>