force-app/main/default/objects/Judgment__c/fields/Garnishment_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Garnishment_Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Garnishment Renewal Date</label>
    <type>Date</type>
</CustomField>