force-app/main/default/objects/Judgment__c/fields/Garnishment_Renewal_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Garnishment_Renewal_Date_Formula__c</fullName>
    <description>Calculate the garnishment renewal date based on the garnishment date.</description>
    <formula>IF(ISNULL(Garnishment_Renewal_Date__c),CASE(Judgment_Province__c,
&apos;British Columbia&apos;,ADDMONTHS(Garnishment_Date__c, 24),
&apos;Alberta&apos;,ADDMONTHS(Garnishment_Date__c, 120),
&apos;Saskatchewan&apos;,ADDMONTHS(Garnishment_Date__c, 120),
&apos;Manitoba&apos;,ADDMONTHS(Garnishment_Date__c, 72),
&apos;New Brunswick&apos;,ADDMONTHS(Garnishment_Date__c, 180),
&apos;Nova Scotia&apos;,ADDMONTHS(Garnishment_Date__c, 60),
&apos;Newfoundland and Labrador&apos;,ADDMONTHS(Garnishment_Date__c, 120),
&apos;Prince Edward Island&apos;,ADDMONTHS(Garnishment_Date__c, 120),
&apos;Ontario&apos;,ADDMONTHS(Garnishment_Date__c, 72),
&apos;Quebec&apos;,ADDMONTHS(Garnishment_Date__c, 120),
&apos;Yukon&apos;,ADDMONTHS(Garnishment_Date__c, 24),
&apos;Northwest Territories&apos;,ADDMONTHS(Garnishment_Date__c, 24),
&apos;Nunavut&apos;,ADDMONTHS(Garnishment_Date__c, 24),
null),Garnishment_Renewal_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate the garnishment renewal date based on the garnishment date.</inlineHelpText>
    <label>Garnishment Renewal Date</label>
    <type>Date</type>
</CustomField>