force-app/main/default/objects/Judgment__c/fields/Interest_Rate_four__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_four__c</fullName>
    <label>Interest Rate-4</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>