force-app/main/default/objects/Judgment__c/fields/Judgement_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Date_Format__c</fullName>
    <formula>TEXT(YEAR(Judgment_Date__c)) &amp; &apos;-&apos; &amp; TEXT(MONTH(Judgment_Date__c)) &amp; &apos;-&apos; &amp; TEXT(DAY(Judgment_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgement Date Format</label>
    <type>Text</type>
</CustomField>