force-app/main/default/objects/Judgment__c/fields/Judgment_Balance__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Balance__c</fullName>
    <inlineHelpText>Judgment Balance</inlineHelpText>
    <label>Judgment Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>