force-app/main/default/objects/Judgment__c/fields/Judgment_Created__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Created__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Judgment Created Date</inlineHelpText>
    <label>Judgment Created</label>
    <type>Date</type>
</CustomField>