force-app/main/default/objects/Judgment__c/fields/Judgment_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Judgment Date</inlineHelpText>
    <label>Judgment Date</label>
    <type>Date</type>
</CustomField>