force-app/main/default/objects/Judgment__c/fields/Judgment_Date_Difference__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Date_Difference__c</fullName>
    <formula>TODAY() - Judgment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment Date Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>