force-app/main/default/objects/Judgment__c/fields/Judgment_Date_Month_Day_Format__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Date_Month_Day_Format__c</fullName>
    <formula>CASE(
MONTH( Judgment_Date__c ),
  1, &quot;January&quot;,
  2, &quot;February&quot;,
  3, &quot;March&quot;,
  4, &quot;April&quot;,
  5, &quot;May&quot;,
  6, &quot;June&quot;,
  7, &quot;July&quot;,
  8, &quot;August&quot;,
  9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  12,&quot;December&quot;,
&quot;&quot;) + &quot; &quot; + TEXT(DAY(Judgment_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment Date Month Day Format</label>
    <type>Text</type>
</CustomField>