force-app/main/default/objects/Judgment__c/fields/Judgment_File__c.field-meta.xml
<CustomField>
    <fullName>Judgment_File__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Judgment File</label>
    <length>50</length>
    <type>Text</type>
</CustomField>