force-app/main/default/objects/Judgment__c/fields/Judgment_Id__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Judgment External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>