force-app/main/default/objects/Judgment__c/fields/Judgment_Number__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Number__c</fullName>
    <description>Judgment Number to sync between portal and salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Judgment Number to sync between portal and salesforce</inlineHelpText>
    <label>Judgment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>