force-app/main/default/objects/Judgment__c/fields/Judgment_Pre_Data_Bal_Other__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Pre_Data_Bal_Other__c</fullName>
    <inlineHelpText>Judgment Pre Data Balance Other Fees</inlineHelpText>
    <label>Judgment Pre Data Bal Other</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>