force-app/main/default/objects/Judgment__c/fields/Judgment_Pre_Data_Bal_Total__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Pre_Data_Bal_Total__c</fullName>
    <label>Judgment Pre Data Bal Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>