force-app/main/default/objects/Judgment__c/fields/Judgment_Pre_LastAccrual__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Pre_LastAccrual__c</fullName>
    <inlineHelpText>Last Accrual for Judgment</inlineHelpText>
    <label>Judgment Pre LastAccrual</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>