force-app/main/default/objects/Judgment__c/fields/Judgment_Serve__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Serve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Judgment Serve</label>
    <type>Date</type>
</CustomField>