force-app/main/default/objects/Judgment__c/fields/Legal_Agency__c.field-meta.xml
<CustomField>
    <fullName>Legal_Agency__c</fullName>
    <description>placement name of who is responsible for this legal action</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Agency</label>
    <length>250</length>
    <type>Text</type>
</CustomField>