force-app/main/default/objects/Judgment__c/fields/Legal_Agency_Formula__c.field-meta.xml
<CustomField>
    <fullName>Legal_Agency_Formula__c</fullName>
    <formula>Legal_Agency_Placement__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display Agency Name</inlineHelpText>
    <label>Legal Agency Name</label>
    <type>Text</type>
</CustomField>