force-app/main/default/objects/Judgment__c/fields/Legal_Agency_Placement__c.field-meta.xml
<CustomField>
    <fullName>Legal_Agency_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Agency</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Judgments</relationshipLabel>
    <relationshipName>Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>