force-app/main/default/objects/Judgment__c/fields/Legal_Firm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Firm</label>
    <length>250</length>
    <type>Text</type>
</CustomField>