force-app/main/default/objects/Judgment__c/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-legal</fullName>
            </value>
            <value>
                <fullName>Pre-Judgment</fullName>
            </value>
            <value>
                <fullName>Judgment</fullName>
            </value>
            <value>
                <fullName>Post-Judgment</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>